<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.social.alexanderpowell.dcmetrotracker.ui.railcolors.RailColorsFragment"
        android:label="@string/menu_rail_routes"
        tools:layout="@layout/fragment_rail_colors" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.social.alexanderpowell.dcmetrotracker.ui.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.social.alexanderpowell.dcmetrotracker.ui.farecalculator.FareCalculatorFragment"
        android:label="@string/menu_fare_calculator"
        tools:layout="@layout/fragment_farecalculator" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.social.alexanderpowell.dcmetrotracker.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.social.alexanderpowell.dcmetrotracker.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.social.alexanderpowell.dcmetrotracker.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>