<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fromTextInputLayout"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="0dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/fromAutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/origin_station_hint"
            android:textSize="20sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/toTextInputLayout"
        android:layout_below="@id/fromTextInputLayout"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="0dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/toAutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/destination_station_hint"
            android:textSize="20sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/getFareButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_below="@id/toTextInputLayout"
        android:text="@string/fare_calculator_button_label"
        android:textSize="15sp"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/fareCardView"
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@id/getFareButton"
        android:minHeight="200dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/fareInformationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/fare_information_label"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/infoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/fareInformationTextView"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:contentDescription="@string/fare_info_icon_content_description"
                android:src="@drawable/outline_info_24"/>

            <TextView
                android:id="@+id/peakFareLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fareInformationTextView"
                android:text="@string/peak_fare_label"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/peakFareTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fareInformationTextView"
                android:layout_toEndOf="@id/peakFareLabelTextView"
                android:textSize="20sp"
                android:textColor="@color/green"/>

            <TextView
                android:id="@+id/offPeakFareLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/peakFareLabelTextView"
                android:text="@string/off_peak_fare_label"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/offPeakFareTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/peakFareLabelTextView"
                android:layout_toEndOf="@id/offPeakFareLabelTextView"
                android:textSize="20sp"
                android:textColor="@color/green"/>

            <TextView
                android:id="@+id/seniorDisabledFareLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/offPeakFareLabelTextView"
                android:text="@string/senior_disabled_fare_label"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/seniorDisabledFareTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/offPeakFareLabelTextView"
                android:layout_toEndOf="@id/seniorDisabledFareLabelTextView"
                android:textSize="20sp"
                android:textColor="@color/green"/>

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>